--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@ aenean rhoncus posuere odio in tincidunt.</p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
             </div>
             <div class="contact-meta1">
-              1600 Pennsylvania Ave NW, Washington,<br>
-DC 20500, United States of America.
+							14950 SE Allen Road,<br>
+							Bellevue, WA 98006
             </div>
 
             <div class="contact-meta1">
-              T: (425) 456-1111<br>
-							M: (425) 456-1212
+							Tel: (206)-228-3378<br>
+							Email:
             </div>
 
             <ul class="socials">
